# RTSL

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  architecture.md  spec.md  temp_triangle.rtsl  temp_triangle2.rtsl  vcpkg.json
.codex/: OPERATING.md  TASK.md  TASK_START_PROMPT.txt  TASK_TEMPLATE.md
.codex/tasks/: cleanup-coordination-agent.md  codex-docs-practical.md  cpp-style-agent.md  dead-code-agent.md  dx12-hlsl.md  ooo-shader-language.md  package_boundary.md  project-layout.md  readme-docs.md  root.md  rtsl-cleanup-main.md  rtsl-sdk-doc-cleanup.md  rtvk-integration.md  sdk-layer.md  sdk-shared-model.md  spec-drift-agent.md  stage-identifiers.md  test-health-agent.md  v01-api-agent.md  v01-docs-agent.md  v01-release-readiness.md  v01-tests-agent.md  voxel-rtsl.md
bindings/: README.md
bindings/c/include/: rtsl.h
cmake/: RTSLConfig.cmake.in  Rtsl.cmake  RtslEmbed.cmake
docs/: README.md  artifacts-sdk.md  artifacts.md  backend-contract.md  c-abi.md  cli.md  cmake-integration.md  cmake.md  code-style.md  compiler-architecture.md  contributing.md  getting-started.md  language.md  linking.md  rtir.md  rtslc.md
include/: rtsl.h
rtsl-sdk/include/: rtsl_sdk.h
rtsl-sdk/include/rtsl/: artifact.hpp  basic_types.hpp  sdk.hpp
rtsl-sdk/include/rtsl/sdk/: ir.hpp  ops.def  program.hpp
rtsl-sdk/src/: artifact.cpp  artifact.hpp  artifact_codec.cpp  artifact_codec.hpp  basic_types.hpp  binary.hpp  ir.hpp  ir_ops.def  program.cpp  reflection.hpp  wire_ops.def
rtsl-spirv/src/: spirv.cpp
rtsl/artifact/: artifact.cpp  artifact.hpp  linker.cpp
rtsl/frontend/: directives.def  parser.cpp  parser.hpp  token.hpp  value_types.def
rtsl/include/: rtsl.h  rtslc.h
rtsl/ir/: ir.cpp  ir.hpp
rtsl/sema/: mangler.hpp  sema.cpp  sema.hpp  stage_boundary_tags.def  uniform_lowering.hpp
rtsl/src/api/: language_service.cpp  language_service.hpp  rtsl.cpp
rtsl/src/artifact/: artifact.cpp  artifact.hpp  linker.cpp  linker.hpp
rtsl/src/driver/: compiler.cpp
rtsl/src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  resource_types.def  tokens.def
rtsl/src/ir/: ir.cpp  ir.hpp  ops.def  text_rtir.cpp  text_rtir.hpp
rtsl/src/sema/: mangler.cpp  sema.cpp  stage_rules.hpp  stdlib.def  uniform_lowering.cpp  uniform_lowering.hpp
rtsl/src/support/: basic_diagnostics.hpp  binary.hpp  hashing.hpp  io.cpp
rtsl/support/: basic_source_manager.cpp  basic_source_manager.hpp  basic_types.hpp  binary.hpp
rtslc/src/: rtslc.cpp
scripts/: task_init.ps1  task_validate.ps1  verify.ps1
spec/: README.md  artifact-format.md  backend-contract.md  c-abi.md  cli.md  compiler-pipeline.md  language.md  linking.md  rtir.md  sdk-model.md
src/: artifact.cpp  artifact.hpp  ast.hpp  basic_diagnostics.cpp  basic_diagnostics.hpp  binary.hpp  compiler.cpp  compiler.hpp  ir.cpp  ir.hpp  language_service.hpp  lexer.cpp  linker.cpp  linker.hpp  mangler.cpp  mangler.hpp  parser.cpp  parser.hpp  rtsl.cpp  rtslc.cpp  sema.cpp  sema.hpp  stage_builtins.cpp  text_rtir.cpp  token.hpp  token_kinds.def  types.hpp  uniform_lowering.cpp  uniform_lowering.hpp
src/AST/: AST.h
src/Compiler/: Compiler.cpp
src/Driver/: rtslc.cpp
src/Emit/: SpirvEmitter.cpp
src/IR/: IR.cpp  IR.h  UniformLowering.cpp
src/Link/: Linker.cpp  Linker.h
src/Mangle/: Mangler.cpp  Mangler.h
src/Parse/: Parser.cpp  Parser.h
src/Sema/: Sema.cpp
src/Serialization/: Artifact.cpp  Artifact.h  TextRTIR.cpp
src/api/: language_service.cpp  language_service.hpp  rtsl.cpp
src/artifact/: artifact.cpp  artifact.hpp  linker.cpp  linker.hpp
src/driver/: compiler.cpp  compiler.hpp  rtslc.cpp
src/frontend/: ast.hpp  builtins.def  lexer.cpp  parser.cpp  parser.hpp  preprocessor.cpp  preprocessor.hpp  resource_types.def  tokens.def
src/ir/: ir.cpp  ir.hpp  ops.def  text_rtir.cpp  text_rtir.hpp
src/runtime/: package.cpp  package.hpp
src/sema/: mangler.cpp  mangler.hpp  sema.cpp  sema.hpp  stage_attributes.def  stage_boundary_tags.def  stage_builtins.cpp  stage_builtins.hpp  stdlib.def  uniform_lowering.cpp
src/support/: basic_diagnostics.cpp  basic_diagnostics.hpp  basic_types.hpp  binary.hpp  hashing.hpp  io.cpp  io.hpp
tests/: artifact.cpp  basic.cpp  compiler.cpp  glsl.cpp  hlsl.cpp  parser_grammar.cpp  parser_negative.cpp  rtsl_tests.cpp  sdk.cpp  spirv.cpp
tests/package-consumer/: CMakeLists.txt  main.cpp
tests/shaders/: empty_main.rtsl  fragment_bare_vec4.rtsl  function_call.rtsl  graphics_program.rtsl  namespaced_uniform.rtsl  preprocessor.rtsl  struct_constructor.rtsl  uniform_layout.rtsl
tools/Rtsl.LanguageServer/: Program.cs
tools/Rtsl.VisualStudio/Rtsl.VisualStudio/: Rtsl.VisualStudio.csproj  RtslClassificationTypes.cs  RtslClassifier.cs  RtslClassifierProvider.cs  RtslContentType.cs  RtslFormats.cs
transpilers/glsl/: CMakeLists.txt
transpilers/glsl/include/rtsl/: glsl.hpp
transpilers/glsl/src/: glsl.cpp
transpilers/hlsl/: CMakeLists.txt
transpilers/hlsl/include/rtsl/: hlsl.hpp
transpilers/hlsl/src/: hlsl.cpp
transpilers/spirv/: CMakeLists.txt
transpilers/spirv/include/rtsl/: spirv.hpp
transpilers/spirv/src/: spirv.cpp
workspace/: default.rtsl  default.rtslo
